probando conexiones de css y js

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <html>
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <link href="index.css" rel="stylesheet" href="styles/style.csa">
   <title>Hello, World!</title>
 </head>
 <body>
   <h1>
     Hello, World!
   </h1>
+  <script src="1.js"></script>
 </body>
 </html>
