--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Hello, World!</title>
 </head>
 <body>
+  <img  class="logo" id="logo"src="imagenes/imagen1.png" alt="No se puede cargar la imagen">
   <h1>
     Hello, World!
   </h1>
