--- a/index.html
+++ b/index.html
@@ -2,28 +2,80 @@
 
 <html lang="es">
 <head>
+  <form
+  action="https://formspree.io/f/mvggnkrk"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
+  
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link href="index.css" rel="stylesheet" href="styles/style.csa">
-  <title>Hello, World!</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- Primary Meta Tags -->
+<title>Bebidas Mor--Tags </title>
+<meta name="title" content="Bebidas Mor--Tags " />
+<meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="Bebidas Mor--Tags " />
+<meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="Bebidas Mor--Tags " />
+<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+  <title>Bebidas Mor</title>
   <link rel="shortcut icon" type="imagen/x-icon" href="iconos/icono.ico">
 </head>
-<body >
+<body>
   <header id="cuerpo">
   <img  class="logo" id="logo"src="imagenes/imagen1.png" alt="No se puede cargar la imagen">
     
   </header>
   
     <div id="imagenes"class="imagenes">
-    <img  class="imagen2"src="imagenes/imagen2.png" width="150px" height="auto">
-    <img  class="imagen3" src="imagenes/imagen3.png" width="150px" height="auto">
-    <img class="imagen4" src="imagenes/imagen4.png" width="140px" height="auto">
-    </div>
+    <img id="imagen2" class="imagen2" src="imagenes/imagen2.png" width="150px" height="auto">
+        <div  id="infoCard1"class="infoCard1">
+        <p class="infoText1">Un mamgar hecho hace más de 8mil años, traido por su servidor </p>
+        <p class="InfoBaja1">HidroMiel</p>
+        <p class="Precio1">4.500</p>
+      </div> 
+    <img id="imagen3" class="imagen3" src="imagenes/imagen3.png" width="150px" height="auto">     
+ <div  id="infoCard2"class="infoCard2">
+        <p class="infoText2">Un mamgar hecho hace más de 8mil años, traido por su servidor </p>
+        <p class="InfoBaja2">HidroMiel</p>
+        <p class="Precio2">4.500</p>
+      </div> 
+     
+    <img id="imagen4" class="imagen4" src="imagenes/imagen4.png" width="140px" height="auto">
+      <div  id="infoCard3"class="infoCard3">
+        <p class="infoText3">Un mamgar hecho hace más de 8mil años, traido por su servidor </p>
+        <p class="InfoBaja3">HidroMiel</p>
+        <p class="Precio3">4.500</p>
+      </div> 
     <div class="container">
   <div class="hero"></div>
 </div>
    
- <div class="hero"></div>
-  
+
+   
   <script src="1.js"></script>
 </body>
 </html>
